--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_bloc: ^8.1.5
   sqflite: ^2.3.2
   image_picker: ^1.0.8
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  group_radio_button: ^1.3.0
 
 
 dev_dependencies:
